[tool.poetry]
name = "numeron_optimize_web"
version = "0.1.0"
description = ""
authors = ["Sylphy0052 <yark0531@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.0.0"
mypy = "^0.991"
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"
isort = "^5.11.4"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
